--- a/desktops/etc/tmpfiles.d/25-enable-ksm-support.conf
+++ b/desktops/etc/tmpfiles.d/25-enable-ksm-support.conf
@@ -1,1 +1,2 @@
-w /sys/kernel/mm/ksm/run - - - - 1\nw /sys/kernel/mm/ksm/sleep_millisecs - - - - 30
+w /sys/kernel/mm/ksm/run - - - - 1
+w /sys/kernel/mm/ksm/sleep_millisecs - - - - 30
