Define SSH2 specifically.

--- a/servers/etc/ssh/sshd_config.d/90-hardening.conf
+++ b/servers/etc/ssh/sshd_config.d/90-hardening.conf
@@ -1,3 +1,7 @@
+# Ensure we only use v2 as a version.
+# (as of version 8.x, 2 is the default, but "just in case" anyone *not* using arch, uses this)
+Protocol 2
+
 # Use KEX/MAC/Ciphers that are relatively modern.
 KexAlgorithms curve25519-sha256@libssh.org,ecdh-sha2-nistp521,ecdh-sha2-nistp384,ecdh-sha2-nistp256,diffie-hellman-group-exchange-sha256
 Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
