Remove chacha20-poly1305 from "good" ciphers.

--- a/servers/etc/ssh/sshd_config.d/90-hardening.conf
+++ b/servers/etc/ssh/sshd_config.d/90-hardening.conf
@@ -3,8 +3,9 @@
 Protocol 2
 
 # Use KEX/MAC/Ciphers that are relatively modern.
+# (Updated to remove chacha20-poly1305 to avoid the terrapin attack vector)
 KexAlgorithms curve25519-sha256@libssh.org,ecdh-sha2-nistp521,ecdh-sha2-nistp384,ecdh-sha2-nistp256,diffie-hellman-group-exchange-sha256
-Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+Ciphers aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
 MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
 
 # Only allow SSH via keys.
@@ -18,6 +19,12 @@ MaxAuthTries 3
 
 # Only allow two simultaneous sessions
 MaxSessions 2
+
+# Forbid empty passwords
+PermitEmptyPasswords no
+
+# Forbid root logins
+PermitRootLogin no
 
 # Forbid agent forwarding
 AllowAgentForwarding no
